--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -8,13 +8,28 @@
   <% @jobs.each do |job| %>
   <tr>
     <td>
+      <%= render_job_status(job) %>
+
       <%= link_to(job.title, admin_job_path(job)) %>
     </td>
     <td>
       <%= job.description %>
     </td>
+
     <td>
-      <%= link_to("Edit", edit_admin_job_path(job)) %>
+      <%= job.wage_lower_bound %>
+    </td>
+
+    <td>
+      <%= job.wage_upper_bound %>
+    </td>
+
+    <td>
+      <%= job.contact_email %>
+    </td>
+
+    <td>
+      <%= link_to("Edit", edit_admin_job_path(job)) %> |
       <%= link_to("Destroy", admin_job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
     </td>
     <td>
