--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -9,9 +9,21 @@
     <td>
       <%= link_to(job.title, job_path(job)) %>
     </td>
-    
+
     <td>
       <%= job.description %>
+    </td>
+
+    <td>
+      <%= job.wage_lower_bound %>
+    </td>
+
+    <td>
+      <%= job.wage_upper_bound %>
+    </td>
+
+    <td>
+      <%= job.contact_email %>
     </td>
 
     <td>
