step 7 upload resume

--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -29,7 +29,7 @@
     </td>
 
     <td>
-      <%= link_to("Edit", edit_admin_job_path(job)) %> |
+      <%= link_to("Edit", edit_admin_job_path(job)) %>
       <%= link_to("Destroy", admin_job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
 
       <% if job.is_hidden %>
