--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -33,9 +33,9 @@
       <%= link_to("Destroy", admin_job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
 
       <% if job.is_hidden %>
-        <%= link_to("Publish", publish_admin_job_path(job), :method => :post, edit_admin_job_path(job)) %>
+        <%= link_to("Publish", publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
       <% else %>
-        <%= link_to("Hide", hide_admin_job_path(job), :method => :post, edit_admin_job_path(job)) %>
+        <%= link_to("Hide", hide_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
       <% end %>
 
     </td>
