--- a/app/views/admin/jobs/edit.html.erb
+++ b/app/views/admin/jobs/edit.html.erb
@@ -1,9 +1,9 @@
 <h1> Edit a job </h1>
-<p> <%= simple_form_for [:admin, @job] do |f| %> </p>
+ <%= simple_form_for [:admin, @job] do |f| %>
 <%= f.input :title %>
 <%= f.input :description %>
-<%= f.input :wage_lower_bound %>
-<%= f.input :wage_upper_bound %>
+<%= f.input :wage_lower_bound, :label => "薪资下限" %>
+<%= f.input :wage_upper_bound, :label => "薪资上限" %>
 <%= f.input :contact_email %>
 <%= f.input :is_hidden %>
 <%= f.submit "Submit" %>
