--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -10,6 +10,18 @@
       <%= link_to(job.title, job_path(job)) %>
     </td>
     <td>
+      <%= job.description %>
+    </td>
+    <td>
+      <%= job.wage_lower_bound %>
+    </td>
+    <td>
+      <%= job.wage_upper_bound %>
+    </td>
+    <td>
+      <%= job.contact_email %>
+    </td>
+    <td>
       <%= link_to("Edit", edit_job_path(job)) %> |
       <%= link_to("Destroy", job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
     </td>
