--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -17,6 +17,7 @@
               <div class="col-md-2">
                 <ul class="nav nav-pills nav-stacked" style="max-width: 300px; padding-top:20px;">
                   <li class="active"> <%= link_to("Jobs", admin_jobs_path ) %> </li>
+                  <li class="active"> <%= link_to("Pu_Jobs", root_path ) %> </li>
                 </ul>
               </div>
 
