admin can see resume list

--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -2,12 +2,39 @@
   <div class="pull-right">
     <%= link_to("Add a job", new_admin_job_path, :class => "btn btn-default") %>
   </div>
+  <thead>
+       <tr>
+           <td>
+               职缺
+           </td>
+
+           <td>
+             收到履历数量
+           </td>
+           <td>
+               薪资下限
+           </td>
+           <td>
+               薪资上限
+           </td>
+           <td>
+               管理选项
+           </td>
+           <td>
+               刊登时间
+           </td>
+       </tr>
+   </thead>
+
 
   <% @jobs.each do |job| %>
   <tr>
     <td>
       <%= render_job_status(job) %>
       <%= link_to(job.title, admin_job_path(job)) %>
+    </td>
+    <td>
+      <%= link_to(job.resumes.count, admin_job_resumes_path(job)) %>
     </td>
     <td>
       <%= job.wage_lower_bound %>
