--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -5,6 +5,19 @@
 <br><br>
 
 <table class="table table-boldered">
+
+  <thead>
+      <tr>
+          <td>职缺</td>
+          <td>收到履历数量</td>
+          <td>薪资下限</td>
+          <td>薪资上限</td>
+          <td>管理选项</td>
+          <td>刊登时间</td>
+      </tr>
+
+  </thead>
+
   <% @jobs.each do |job| %>
   <tr>
     <td>
@@ -13,7 +26,7 @@
       <%= link_to(job.title, admin_job_path(job)) %>
     </td>
     <td>
-      <%= job.description %>
+      <%= link_to(job.resumes.count, admin_job_resumes_path(job)) %>
     </td>
     <td>
       <%= job.wage_lower_bound %>
