--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,7 +2,10 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Job Listing </a>
+            <a class="navbar-brand" href="/">
+              <!-- <i class="fa fa-diamond" aria-hidden="true"> 真 -24K Offer </i>  -->
+              <img src='<%= image_url 'logo.png' %>'>真 -24K Offer
+            </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
