--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-boldered">
+<!-- <table class="table table-boldered">
   <thead>
       <tr>
           <td>职缺</td>
@@ -28,34 +28,58 @@
   </div>
 
 
-  <!-- <div class="pull-right">
-    <%= link_to("Add a job", new_job_path, :class => "btn btn-default") %>
-  </div> -->
+
 
   <% @jobs.each do |job| %>
   <tr>
     <td>
       <%= link_to(job.title, job_path(job)) %>
     </td>
-    <!-- <td>
-      <%= job.description %>
-    </td> -->
+
     <td>
       <%= job.wage_lower_bound %>
     </td>
     <td>
       <%= job.wage_upper_bound %>
     </td>
-    <!-- <td>
-      <%= job.contact_email %>
-    </td>
-    <td>
-      <%= link_to("Edit", edit_job_path(job)) %> |
-      <%= link_to("Destroy", job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
-    </td> -->
+
     <td>
       <%= job.created_at %>
     </td>
   </tr>
   <% end %>
-</table>
+</table> -->
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">求职列表
+
+      <div class="pull-right">
+        <%= link_to("Add a job", new_admin_job_path, :class => "btn btn-default") %>
+      </div>
+
+      <div class="dropdown clearfix pull-right">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuDivider" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          排序
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
+            <li>
+              <%= link_to("按照薪资下限排序", jobs_path(:order => "by_lower_bound")) %>
+            </li>
+            <li>
+              <%= link_to("按照薪资上限排序", jobs_path(:order => "by_upper_bound")) %>
+            </li>
+            <li>
+              <%= link_to("按照发表时间排序", jobs_path) %>
+            </li>
+        </ul>
+      </div>
+
+    </h3>
+
+
+  </div>
+  <div class="panel-body">
+    Panel content
+  </div>
+</div>
