--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-  <div class="jumbotron">
+  <!-- <div class="jumbotron">
     <h1 class="title">18K Offer</h1>
     <p class="slogan">18K Offer 是一个提供18K薪水工作机会的求职网站。
     <br>
@@ -39,4 +39,20 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
+  <div class="col-md-12">
+     <div class="row box">
+       <div class="box-inner col-md-6 col-md-offset-3">
+         <h1 class="title">18K Offer</h1>
+         <p class="slogan">18K Offer 是一个提供18K薪水工作机会的求职网站。
+           <br>
+           我们希望借由这个网站，能让大家找到且应征上高薪且优质的工作。
+           <br>
+           凭借自己的努力和天份也会变 Winner
+         </p>
+         <p class="lead">
+           <%= link_to '马上应征', jobs_path, class: 'btn btn-danger' %>
+         </p>
+       </div>
+     </div>
+   </div>
