--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,26 @@
 @import "bootstrap";
 @import "font-awesome";
 @import url(http://fonts.googleapis.com/css?family=Roboto);
+
+  // .panel{
+  //   margin: 0 -20px 0;
+  // }
+
+  html {
+    position: relative;
+    min-height: 100%;
+  }
+
+  body {
+    margin-bottom: 100px;
+  }
 //---------Navbar---------
+  .navbar-brand > img {
+    display: inline-block;
+    margin-right: 10px;
+    width: 32px;
+    height: 32px;
+  }
 
  .navbar-default {
      background-color: #212121;
@@ -64,12 +83,21 @@
  }
 
  //---------Box---------
+  // .container-fluid .box{
+  //   padding-bottom: 110px;//内部的底部边距，这样按钮不会很靠近底部了
+  //   margin: 0 -15px 20px;//顶部margin为0，因此可以直接接着导航栏；左右margin为负15，因此可以顶到浏览器的边缘（抵消 container-fluid 的 15px 左右padding);底部margin为20，会跟下面的内容撑开距离
+  //   border-radius: 0;//圆角为0
+  // }
+
+
 
  .box {
-     background-image: url("header.jpg");
+     background-image: url('http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-542213.png');
      background-repeat: no-repeat;
      background-size: cover;
      margin-bottom: 50px;
+     //margin-top: -20px;
+
 
      .box-inner {
          background-color: rgba(250, 250, 250, 0.69);
@@ -127,153 +155,167 @@
      font-weight: 400;
  }
 
- //---------other---------
+ //---------Footer---------
+ footer {
+     color: white;
+     position: absolute;
+     bottom: 0;
+     width: 100%;
 
-.jumbotron{
-  background-image: url('http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-542213.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-bottom: 110px;
-}
+ }
 
-.title{
-  background-color: rgba(250, 250, 250, 0.39);
-  max-width: 500px;
-  margin-top: 200px;
-  margin-bottom: 0;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-}
+ footer .footer-below {
+     padding: 25px 0;
+     background-color: #233140;
+ }
 
-.jumbotron h1, .jumbotron .h1{
-  text-align: left;
-  color: #222;
-  padding: 50px 20px 0px;
-}
-
-.jumbotron p {
-  margin: 0;
-  font-size: 26px;
-  max-width: 500px;
-  background-color: rgba(250, 250, 250, 0.39);
-  padding: 20px;
-  text-align: left;
-  color: #222;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-}
-
-.slogan{
-  margin-top: 10px;
-  margin-bottom: 50px;
-  text-align: center;
-  color: white;
-  top: 12px;
-}
-
-.btn-danger {
-  color: #fff;
-  background-color: #EF6C00;
-  border-color: #EF6C00;
-}
-
-.btn-danger:hover {
-  background-color: #E65100;
-  border-color: #E65100;
-}
-
-.lead{
-  margin-bottom: 60px;
-  text-align: center;
-  color: white;
-}
-
-.caption {
-  margin: 30px;
-  text-align: center;
-  top: 20px;
-}
-
-.thumbnail {
-    border: 0 none;
-    box-shadow: none;
-    margin-top: 60px;
-}
-
-.custab{
-  border: 1px solid #ccc;
-  padding: 5px;
-  margin: 5% 0;
-  box-shadow: 3px 3px 2px #ccc;
-  transition: 0.5s
-}
-
-.custab:hover{
-  box-shadow: 3px 3px 0px transparent;
-  transition: 0.5s;
-}
-
-.navbar-default{
-  background-color: #212121;
-  border-color: #212121;
-  margin-bottom: 0;
-}
-
-.navbar-default .navbar-brand {
-  color: #EF6C00;
-  padding: 10px 15px;
-  line-height: 30px;
-}
-
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus{
-  color: #FF6F00;
-  background-color: transparent;
-}
-
-.navbar-default .navbar-nav > li > a{
-  color: #EF6C00;
-}
-
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus{
-  color: #FF6F00;
-  background-color: transparent;
-}
-
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-  color: #FF6F00;
-  background-color: #FFE0B2;
-}
-
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:focus,
-.navbar-default .navbar-nav > .open > a:hover {
-  color: #212121;
-  background-color: #FFE0B2;
-}
-
-.navbar-brand > img {
-  display: inline-block;
-  margin-right: 10px;
-  width: 32px;
-  height: 32px;
-}
-
-.container-fluid .jumbotron{
-  padding-bottom: 110px;
-  margin: 0 -15px 20px;
-  border-radius: 0;
-}
-
-@media (min-width: 768px) {
-  .navbar{
-    border-radius: 0;
-  }
-}
-
+//  //---------other---------
+//
+// .jumbotron{
+//   background-image: url('http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-542213.png');
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   background-bottom: 110px;
+// }
+//
+// .title{
+//   background-color: rgba(250, 250, 250, 0.39);
+//   max-width: 500px;
+//   margin-top: 200px;
+//   margin-bottom: 0;
+//   border-top-left-radius: 3px;
+//   border-top-right-radius: 3px;
+// }
+//
+// .jumbotron h1, .jumbotron .h1{
+//   text-align: left;
+//   color: #222;
+//   padding: 50px 20px 0px;
+// }
+//
+// .jumbotron p {
+//   margin: 0;
+//   font-size: 26px;
+//   max-width: 500px;
+//   background-color: rgba(250, 250, 250, 0.39);
+//   padding: 20px;
+//   text-align: left;
+//   color: #222;
+//   border-top-left-radius: 3px;
+//   border-top-right-radius: 3px;
+// }
+//
+// .slogan{
+//   margin-top: 10px;
+//   margin-bottom: 50px;
+//   text-align: center;
+//   color: white;
+//   top: 12px;
+// }
+//
+// .btn-danger {
+//   color: #fff;
+//   background-color: #EF6C00;
+//   border-color: #EF6C00;
+// }
+//
+// .btn-danger:hover {
+//   background-color: #E65100;
+//   border-color: #E65100;
+// }
+//
+// .lead{
+//   margin-bottom: 60px;
+//   text-align: center;
+//   color: white;
+// }
+//
+// .caption {
+//   margin: 30px;
+//   text-align: center;
+//   top: 20px;
+// }
+//
+// .thumbnail {
+//     border: 0 none;
+//     box-shadow: none;
+//     margin-top: 60px;
+// }
+//
+// .custab{
+//   border: 1px solid #ccc;
+//   padding: 5px;
+//   margin: 5% 0;
+//   box-shadow: 3px 3px 2px #ccc;
+//   transition: 0.5s
+// }
+//
+// .custab:hover{
+//   box-shadow: 3px 3px 0px transparent;
+//   transition: 0.5s;
+// }
+//
+// .navbar-default{
+//   background-color: #212121;
+//   border-color: #212121;
+//   margin-bottom: 0;
+// }
+//
+// .navbar-default .navbar-brand {
+//   color: #EF6C00;
+//   padding: 10px 15px;
+//   line-height: 30px;
+// }
+//
+// .navbar-default .navbar-brand:hover,
+// .navbar-default .navbar-brand:focus{
+//   color: #FF6F00;
+//   background-color: transparent;
+// }
+//
+// .navbar-default .navbar-nav > li > a{
+//   color: #EF6C00;
+// }
+//
+// .navbar-default .navbar-nav > li > a:hover,
+// .navbar-default .navbar-nav > li > a:focus{
+//   color: #FF6F00;
+//   background-color: transparent;
+// }
+//
+// .navbar-default .navbar-nav > .active > a,
+// .navbar-default .navbar-nav > .active > a:hover,
+// .navbar-default .navbar-nav > .active > a:focus {
+//   color: #FF6F00;
+//   background-color: #FFE0B2;
+// }
+//
+// .navbar-default .navbar-nav > .open > a,
+// .navbar-default .navbar-nav > .open > a:focus,
+// .navbar-default .navbar-nav > .open > a:hover {
+//   color: #212121;
+//   background-color: #FFE0B2;
+// }
+//
+// .navbar-brand > img {
+//   display: inline-block;
+//   margin-right: 10px;
+//   width: 32px;
+//   height: 32px;
+// }
+//
+// .container-fluid .jumbotron{
+//   padding-bottom: 110px;
+//   margin: 0 -15px 20px;
+//   border-radius: 0;
+// }
+//
+// @media (min-width: 768px) {
+//   .navbar{
+//     border-radius: 0;
+//   }
+// }
+//
 /************** LOGIN MODAL *************/
 .loginmodal-container {
   padding: 30px;
