--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,11 +1,9 @@
-
-
-
-<div class="panel panel-default">
+<div class="col-md-8 col-centered">
+  <div class="panel panel-default">
   <div class="panel-heading">
     <h3>求职列表
       <div class="pull-right">
-        <%= link_to("Add a job", new_admin_job_path, :class => "btn btn-default") %>
+        <%= link_to("Add a job", new_job_path, :class => "btn btn-default") %>
       </div>
 
       <div class="dropdown clearfix pull-right">
@@ -28,35 +26,36 @@
 
     </h3>
     </div>
-  <div class="panel-body">
-    <table class="table table-boldered">
-      <thead>
-          <tr>
-              <td>职缺</td>
-              <td>薪资下限</td>
-              <td>薪资上限</td>
-              <td>刊登时间</td>
-          </tr>
-      </thead>
+    <div class="panel-body">
+      <table class="table table-boldered">
+        <thead>
+            <tr>
+                <td>职缺</td>
+                <td>薪资下限</td>
+                <td>薪资上限</td>
+                <td>刊登时间</td>
+            </tr>
+        </thead>
 
-      <% @jobs.each do |job| %>
-      <tr>
-        <td>
-          <%= link_to(job.title, job_path(job)) %>
-        </td>
+        <% @jobs.each do |job| %>
+        <tr>
+          <td>
+            <%= link_to(job.title, job_path(job)) %>
+          </td>
 
-        <td>
-          <%= job.wage_lower_bound %>
-        </td>
-        <td>
-          <%= job.wage_upper_bound %>
-        </td>
+          <td>
+            <%= job.wage_lower_bound %>
+          </td>
+          <td>
+            <%= job.wage_upper_bound %>
+          </td>
 
-        <td>
-          <%= job.created_at %>
-        </td>
-      </tr>
-      <% end %>
-    </table>
+          <td>
+            <%= job.created_at %>
+          </td>
+        </tr>
+        <% end %>
+      </table>
+    </div>
   </div>
 </div>
